workspace-sf/force-app/main/default/objects/Pergunta__c/Pergunta__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar o cadastro de perguntas</description>
    <label>Questão de Risco</label>
    <nameField>
        <label>Nome da Pergunta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questões de Risco</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>