workspace-sf/force-app/main/default/objects/Pergunta__c/fields/OpcoesResposta__c.field-meta.xml
<CustomField>
    <fullName>OpcoesResposta__c</fullName>
    <inlineHelpText>Colocar os valores separados por ;</inlineHelpText>
    <label>Opções da lista</label>
    <type>TextArea</type>
</CustomField>