workspace-sf/force-app/main/default/objects/Pergunta__c/fields/Pergunta__c.field-meta.xml
<CustomField>
    <fullName>Pergunta__c</fullName>
    <label>Pergunta</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>