workspace-sf/force-app/main/default/objects/Pergunta__c/fields/PerguntaResumida__c.field-meta.xml
<CustomField>
    <fullName>PerguntaResumida__c</fullName>
    <externalId>true</externalId>
    <label>Pergunta Resumida</label>
    <length>255</length>
    <type>Text</type>
</CustomField>