workspace-sf/force-app/main/default/objects/Pergunta__c/fields/TipoResposta__c.field-meta.xml
<CustomField>
    <fullName>TipoResposta__c</fullName>
    <label>Tipo de dado da resposta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booleano</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Opção</fullName>
                <label>Lista Fixa</label>
            </value>
            <value>
                <fullName>Moeda</fullName>
            </value>
            <value>
                <fullName>Número</fullName>
            </value>
            <value>
                <fullName>Texto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>