workspace-sf/force-app/main/default/objects/Pergunta__c/validationRules/ObrigarOpcoesMaisValores.validationRule-meta.xml
<ValidationRule>
    <fullName>ObrigarOpcoesMaisValores</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(TipoResposta__c, &apos;Opção&apos;),
    NOT(ISBLANK(OpcoesResposta__c)),
    OR(
       NOT(CONTAINS(OpcoesResposta__c,&apos;;&apos;)),
       IF(
          LEN(OpcoesResposta__c) &lt;= FIND(&apos;;&apos;,OpcoesResposta__c),
          true,
          false
       )
    )
)</errorConditionFormula>
    <errorDisplayField>OpcoesResposta__c</errorDisplayField>
    <errorMessage>Preencha mais de uma opção de resposta no campo Opções de lista.</errorMessage>
</ValidationRule>