workspace-sf/force-app/main/default/objects/Pergunta__c/validationRules/ObrigarPreenchimentoOpcoes.validationRule-meta.xml
<ValidationRule>
    <fullName>ObrigarPreenchimentoOpcoes</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(TipoResposta__c, &apos;Opção&apos;),
    ISBLANK(OpcoesResposta__c)
)</errorConditionFormula>
    <errorDisplayField>OpcoesResposta__c</errorDisplayField>
    <errorMessage>Preencha as opções de resposta no campo Opções de lista.</errorMessage>
</ValidationRule>