workspace-sf/force-app/main/default/objects/Pergunta__c/validationRules/ValidarPreenchimentoOpcoesResposta.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarPreenchimentoOpcoesResposta</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISPICKVAL(TipoResposta__c, &apos;Opção&apos;)),
    NOT(ISBLANK(OpcoesResposta__c))
)</errorConditionFormula>
    <errorDisplayField>TipoResposta__c</errorDisplayField>
    <errorMessage>Esse tipo de resposta não permite opções</errorMessage>
</ValidationRule>