workspace-sf/force-app/main/default/objects/Pergunta__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Pergunta__c</columns>
    <columns>TipoResposta__c</columns>
    <columns>OpcoesResposta__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas as perguntas</label>
</ListView>